# azoth

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bunfig.toml  package.json  preload.ts  test-daemon.ts  tsconfig.json
.github/workflows/: release.yml
contrib/launchd/: com.anthropic.claude-daemon.plist
contrib/systemd/: claude-daemon.service
crates/azoth/: Cargo.toml
crates/azoth-core/: Cargo.toml
crates/azoth-core/src/: lib.rs  red_team.rs  test_support.rs
crates/azoth-core/src/adapter/: anthropic_messages.rs  error.rs  mock.rs  mod.rs  openai_chat_completions.rs  openai_sse.rs  profile.rs  sse.rs  stream.rs
crates/azoth-core/src/artifacts/: mod.rs
crates/azoth-core/src/authority/: approval_bridge.rs  capability.rs  engine.rs  mod.rs  secret.rs  tainted.rs
crates/azoth-core/src/context/: budget.rs  composite.rs  discipline.rs  evidence.rs  graph_evidence.rs  kernel.rs  mod.rs  reranker.rs  symbol_evidence.rs  tokenizer.rs
crates/azoth-core/src/contract/: mod.rs
crates/azoth-core/src/eval/: localization.rs  mod.rs  regression.rs
crates/azoth-core/src/event_store/: jsonl.rs  mod.rs  sqlite.rs
crates/azoth-core/src/event_store/migrations/: m0001_initial.rs  m0002_fts_schema.rs  m0003_symbols.rs  m0004_co_edit.rs  m0005_impact.rs  m0006_eval.rs  m0007_turns_at.rs  mod.rs
crates/azoth-core/src/execution/: clock.rs  context.rs  dispatcher.rs  mod.rs
crates/azoth-core/src/impact/: config.rs  mod.rs
crates/azoth-core/src/retrieval/: config.rs  mod.rs  symbol.rs
crates/azoth-core/src/sandbox/: mod.rs  policy.rs  probe.rs  tier_a.rs  tier_b.rs  tier_cd.rs
crates/azoth-core/src/schemas/: content.rs  contract.rs  effect.rs  event.rs  ids.rs  impact.rs  mod.rs  turn.rs
crates/azoth-core/src/telemetry/: mod.rs
crates/azoth-core/src/tools/: bash.rs  clock.rs  fs_write.rs  mod.rs  repo_read_file.rs  repo_read_spans.rs  repo_search.rs
crates/azoth-core/src/tools/bash/: classifier.rs
crates/azoth-core/src/turn/: mod.rs
crates/azoth-core/src/validators/: impact.rs  mod.rs
crates/azoth-core/tests/: abort_preserves_streamed_usage.rs  adapter_auth_modes.rs  adapter_fixture.rs  adapter_fixture_openai.rs  adapter_live_invoke.rs  approval_grant_path.rs  backpressure_smoke.rs  bash_classifier_adversarial.rs  context_budget_fairness.rs  context_kernel_v2.rs  contract_amend_multiplier_cap.rs  contract_amend_rate_limit_per_run.rs  contract_amend_rate_limit_per_turn.rs  contract_amend_replay.rs  contract_amend_round_trips.rs  contract_amend_turn_atomicity.rs  contract_scoped_turn.rs  eval_localization.rs  eval_regression.rs  eval_v2_1_seed.rs  event_ts_replay_compat.rs  evidence_collector_ripgrep.rs  evidence_replay.rs  evidence_snippet_stable.rs  forensic_as_of_projection.rs  heartbeat_fires_during_streaming.rs  heartbeat_stall_recovery.rs  kernel_binds_contract_into_request.rs  m0007_turns_at_forward_compat.rs  migration_forward_compat.rs  once_scope_consumed_after_reuse.rs  resume_rebuilds_history.rs  resume_recomputes_effects_and_turns.rs  resume_replays_prior_commits.rs  sandbox_default_tier_a.rs  sandbox_tier_a_smoke.rs  sprint_7_5_abort_reasons.rs  sqlite_mirror_schema_smoke.rs  tdad_impact_turn.rs  tool_names_satisfy_provider_regex.rs  (+10 more)
crates/azoth-core/tests/fixtures/anthropic/: text_only.sse  tool_use.sse
crates/azoth-core/tests/fixtures/openai/: error_frame.sse  parallel_tool_calls.sse  text_only.sse
crates/azoth-repo/: Cargo.toml
crates/azoth-repo/queries/: rust.scm
crates/azoth-repo/src/: fts.rs  indexer.rs  lib.rs
crates/azoth-repo/src/code_graph/: common.rs  go.rs  index.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/azoth-repo/src/history/: co_edit.rs  git_cli.rs  graph_retrieval.rs  mod.rs
crates/azoth-repo/src/impact/: cargo.rs  git_status.rs  gotest.rs  heuristic.rs  jest.rs  mod.rs  pytest.rs  runner.rs
crates/azoth-repo/tests/: co_edit_graph.rs  fts_carries_valid_at.rs  go_extraction.rs  go_reindex_incremental.rs  gotest_impact.rs  gotest_runner.rs  jest_impact.rs  jest_runner.rs  pytest_impact.rs  pytest_runner.rs  python_extraction.rs  python_reindex_incremental.rs  retrieval_parity.rs  symbol_extraction.rs  symbol_incremental.rs  tdad_impact.rs  typescript_extraction.rs  typescript_reindex_incremental.rs
crates/azoth-repo/tests/fixtures/go/: sample.go
crates/azoth-repo/tests/fixtures/python/: sample.py
crates/azoth-repo/tests/fixtures/typescript/: sample.ts  sample.tsx
crates/azoth/src/: eval.rs  eval_live.rs  export.rs  main.rs  replay.rs
crates/azoth/src/tui/: app.rs  card.rs  config.rs  inspector.rs  markdown.rs  mod.rs  motion.rs  palette.rs  rail.rs  render.rs  sheet.rs  splash.rs  theme.rs  util.rs  whisper.rs
crates/azoth/src/tui/input/: mod.rs
crates/azoth/src/tui/widgets/: approval_modal.rs  mod.rs  scrollback.rs  status_line.rs
daemon/: authManager.ts  banner.ts  client.ts  conversationCache.ts  daemonConfig.ts  index.ts  osNotification.ts  permissionRouter.ts  pidFile.ts  ringBuffer.ts  supervisor.ts  worker.ts
docs/: budget_plan.md  budget_progress.md  draft_plan.md  v2_plan.md
docs/dogfood/v2.1/: go-session.md  python-session.md  typescript-session.md
docs/eval/: v2.1_seed_tasks.json  v2_seed_tasks.json
docs/research/: deep-research-report.md  research_00.md  research_01.md
docs/superpowers/plans/: 2026-04-21-v2_1-implementation.md  2026-04-21-v2_1-tracker.md  2026-04-24-post-e2e-gap-fixes.md
docs/superpowers/specs/: 2026-04-18-v2-closure-design.md  2026-04-21-v2-trilogy-design.md
scripts/: setup-internal-stubs.sh
src/: global.d.ts  main.tsx  tools.ts
src/bootstrap/: state.ts
src/bridge/: bridgeMain.ts  bridgePointer.ts
src/daemon/: banner.ts  client.ts  ipcProtocol.ts  socketServer.ts  supervisor.ts  workerRegistry.ts
src/entrypoints/sdk/: toolTypes.ts
src/ink/: global.d.ts
src/tools/TungstenTool/: TungstenTool.js
src/tools/WorkflowTool/: constants.js
src/types/: connectorText.js
stubs/: bun-bundle.ts  generate-stubs.sh
stubs/src/bootstrap/: state.js
stubs/src/utils/: auth.js  autoUpdater.js  (+10 more)
(+3 files in other folders)
