[workspace]
resolver = "2"
members = [
    "crates/azoth-core",
    "crates/azoth-repo",
    "crates/azoth",
]

[workspace.package]
version = "2.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nalyk/azoth"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime and utilities
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "signal", "net", "process"] }
async-trait = "0.1"
futures = "0.3"

# Errors, logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# IDs, hashing, time
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10" }

# Storage — SQLite mirror of committed/aborted turns. JSONL remains
# authoritative (CRIT-1); the mirror is a rebuildable secondary index.
rusqlite = { version = "0.32", features = ["bundled"] }

# Sandbox (Linux)
landlock = "0.4"
seccompiler = "0.5"
nix = { version = "0.29", features = ["process", "mount", "sched", "signal", "user", "fs"] }
rustix = { version = "0.38", features = ["process", "fs", "mount"] }

# Tokenizer
tiktoken-rs = "0.6"

# Retrieval (in-process ripgrep stack)
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

# Symbol extraction (Sprint 2 base; v2.1 widening).
# Grammar pins must travel together: every tree-sitter-* grammar
# is ABI-linked to tree-sitter 0.22; bumping either side without
# the other breaks the ABI. v2.1 widens the wired grammar set:
# Python (PR 2.1-B), TypeScript (PR 2.1-C), Go (PR 2.1-D).
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"

# Test utils
tempfile = "3"
pretty_assertions = "1"
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
