[package]
name = "azoth-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Azoth runtime library: contracts, context kernel, authority, adapters, tools, sandbox, turn driver."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
tiktoken-rs = { workspace = true }
ignore = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
grep-matcher = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }
nix = { workspace = true }
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock = { workspace = true }
rusqlite = { workspace = true }
