[package]
name = "azoth-repo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
azoth-core = { path = "../azoth-core" }

# Storage — shares the mirror DB file; opens its own Connection.
rusqlite = { workspace = true }

# Async + traits
async-trait = { workspace = true }
tokio = { workspace = true }

# Repo walking (scope-parity with ripgrep lexical retrieval).
ignore = { workspace = true }

# Symbol extraction (Sprint 2). ABI-linked pair — never bump
# independently. See workspace Cargo.toml note.
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }

# Errors + logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Serde (for future persisted types)
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
