[package]
name = "azoth-repo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
azoth-core = { path = "../azoth-core" }

# Storage — shares the mirror DB file; opens its own Connection.
rusqlite = { workspace = true }

# Async + traits
async-trait = { workspace = true }
tokio = { workspace = true }

# Repo walking (scope-parity with ripgrep lexical retrieval).
ignore = { workspace = true }

# Symbol extraction (Sprint 2 base + v2.1 widening). ABI-linked
# set — never bump independently. See workspace Cargo.toml note.
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }

# Stable content-addressable hashing for the `symbols.digest` column
# (PR #6 review — `DefaultHasher` algorithm is not stable across Rust
# versions per the std docs, which would silently invalidate older
# digests on rustc upgrade). SHA-256 truncated to 16 hex chars.
sha2 = { workspace = true }
hex = { workspace = true }

# Errors + logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Serde (for future persisted types)
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
